# crucible

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  posts.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  crucible-template.yml
crucible/: CLAUDE_CODE_PROMPT.md  README.md  __init__.py  requirements.txt  runner.py  setup.py
crucible/agents/: base_agent.py  shadow_agent.py
crucible/attacks/: strategies.py
crucible/cli/: crucible.py
crucible/core/: engine.py  file_lock.py  shadow_runner.py
crucible/dashboard/: __init__.py  server.py  terminal.py
crucible/dashboard/static/: index.html
crucible/integrations/github/: __init__.py  commenter.py  sarif.py
crucible/integrations/github_actions/: parser.py
crucible/integrations/gitlab/: parser.py
crucible/integrations/playwright/: __init__.py  parser.py
crucible/memory/: trace_memory.py
crucible/scoring/: darwin_scorer.py  scorer.py
crucible/tests/: test_crucible.py  test_darwin.py  test_dashboard.py  test_integrations.py  test_shadow.py  test_v03.py
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: generate_demo_svg.py  record_demo.sh
